--- a/index.html
+++ b/index.html
@@ -3,9 +3,48 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Work+Sans:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
+
     <title>Architects Website</title>
+    <link rel="stylesheet" href="styles/architect.css">
 </head>
 <body>
-    <h1>body</h1>
+    <!-- Header Starts Here -->
+    <header class="header">
+        <a href="#default" class="logo">CompanyLogo</a>
+        <div class="header-right">
+            <a class="#home" href="#home">Home</a>
+            <a href="#about">About</a>
+            <a href="#contact">Contact Us</a>
+            <a href="#login">Login</a>
+        </div>
+    </header>
+
+    <!-- Home Page Starts Here -->
+    <section class="container home-page" id="home">
+        <div class="section-info home-page-info">
+            <h1 class="section-title home-page-title">Brand New <br>Group of Architects</h1>
+            <p class="section-des home-page-des">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
+            <button class="btn-primary">Explore More</button>
+        </div>
+        <img class="home-page-image" src="images/banner.png" alt="">
+    </section>
+
+<!-- Experience Starts Here -->
+
+
+
+<!-- Facts Starts Here -->
+
+
+
+<!-- Sponsors Starts Here -->
+
+
+
+<!-- Footer Starts Here -->
+
 </body>
 </html>
