--- a/index.html
+++ b/index.html
@@ -1,15 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Work+Sans:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Work+Sans:wght@100;200;300;400;500;600;700;800;900&display=swap"
+        rel="stylesheet">
 
     <title>Architects Website</title>
     <link rel="stylesheet" href="styles/architect.css">
 </head>
+
 <body>
     <!-- Header Starts Here -->
     <header class="header">
@@ -26,25 +30,74 @@
     <section class="container home-page" id="home">
         <div class="section-info home-page-info">
             <h1 class="section-title home-page-title">Brand New <br>Group of Architects</h1>
-            <p class="section-des home-page-des">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
+            <p class="section-des home-page-des">There are many variations of passages of Lorem Ipsum available, but the
+                majority have suffered alteration in some form, by injected humour, or randomised words which don't look
+                even</p>
             <button class="btn-primary">Explore More</button>
         </div>
         <img class="home-page-image" src="images/banner.png" alt="">
     </section>
 
-<!-- Experience Starts Here -->
+    <main>
+        <!-- Features Starts Here -->
+        <section class="container features">
+            <div class="features-image">
+                <img src="images/team1.png" alt="">
+                <img src="images/team2.png" alt="">
+                <img src="images/team3.png" alt="">
+                <img src="images/team4.png" alt="">
+            </div>
+            <div class="features-info">
+                <h3 class="section-title features-title"><span class="gray">Quick list</span> of Our <br><span
+                        class="orange">Features</span></h3>
+                <p class="section-des features-des">There are many variations of passages of Lorem Ipsum available, but
+                    the majority have suffered alteration in some form, by injected humour, or randomised words which
+                    don't look even</p>
+                <button class="btn-primary">Explore More</button>
+            </div>
+        </section>
+
+        <!-- Experience Starts Here -->
+        <div class="experience">
+            <div class="experience-info">
+                <h3 class="section-title experience-title">Features you will love & enjoy</h3>
+                <p class="section-des experience-des">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
+                <div class="experience-box">
+                    <h5 class="box-title">Desktop & Mobile Version</h5>
+                    <p class="box-des">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+                </div>
+                <div class="experience-box">
+                    <h5 class="box-title">Drag & Drop Builder</h5>
+                    <p class="box-des">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+                </div>
+                <div class="experience-box">
+                    <h5 class="box-title">Awesome Modern Design</h5>
+                    <p class="box-des">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+                </div>
+                <div class="experience-box">
+                    <h5 class="box-title">Super Easy to Edit</h5>
+                    <p class="box-des">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+                </div>
+            </div>
+            <div class="experience-img">
+                <img src="images/architect.png" alt="">
+                <button class="btn-primary experience-btn">10+ Year <br>Experience</button>
+            </div>
+        </div>
+
+
+        <!-- Facts Starts Here -->
 
 
 
-<!-- Facts Starts Here -->
+        <!-- Sponsors Starts Here -->
 
 
 
-<!-- Sponsors Starts Here -->
+    </main>
 
-
-
-<!-- Footer Starts Here -->
+    <!-- Footer Starts Here -->
 
 </body>
+
 </html>
