--- a/index.html
+++ b/index.html
@@ -81,7 +81,9 @@
             </div>
             <div class="experience-img">
                 <img src="images/architect.png" alt="">
-                <button class="btn-primary experience-btn">10+ Year <br>Experience</button>
+                <div>
+                    <button class="btn-primary experience-btn">10+ Year <br>Experience</button>
+                </div>
             </div>
         </div>
 
