--- a/index.html
+++ b/index.html
@@ -89,16 +89,58 @@
 
 
         <!-- Facts Starts Here -->
-
+        <section class="facts">
+            <div class="facts-info">
+                <h3 class="section-title facts-title">Some Facts</h3>
+                <p class="section-des facts-des">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration.</p>
+            </div>
+            <div class="facts-icons">
+                <div class="icons-list">
+                    <img src="images/icons/ribon.png" alt="">
+                    <h3 class="section-title icons-title">54</h3>
+                    <p class="section-des icons-des">Awards Winnings</p>
+                </div>
+                <div class="icons-list">
+                    <img src="images/icons/projects.png" alt="">
+                    <h3 class="section-title icons-title">1458</h3>
+                    <p class="section-des icons-des">Project Finished</p>
+                </div>
+                <div class="icons-list">
+                    <img src="images/icons/customers.png" alt="">
+                    <h3 class="section-title icons-title">590</h3>
+                    <p class="section-des icons-des">Clients Worked</p>
+                </div>
+                <div class="icons-list">
+                    <img src="images/icons/email.png" alt="">
+                    <h3 class="section-title icons-title">22578</h3>
+                    <p class="section-des icons-des">Email Send</p>
+                </div>
+            </div>
+        </section>
 
 
         <!-- Sponsors Starts Here -->
-
-
+        <section class="sponsor">
+            <div class="sponsor-info">
+                <h3 class="section-title sponsor-title">Our Sponsors</h3>
+                <p class="section-des sponsor-des">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration.</p>
+            </div>
+            <div class="social-media-img">
+                <img src="images/sponsors/spotify.png" alt="">
+                <img src="images/sponsors/amazon.png" alt="">
+                <img src="images/sponsors/google.png" alt="">
+                <img src="images/sponsors/telerama.png" alt="">
+                <img src="images/sponsors/figma.png" alt="">
+            </div>
+        </section>
 
     </main>
 
     <!-- Footer Starts Here -->
+    <footer class="footer">
+        <p class="footer-info">All rights reserved copyright@2023 startup landing page design</p>
+    </footer>
+
 
 </body>
 
